# Hello-World

./: .gitignore  CMakeLists.txt  Hello World.sln  Hello World.vcxproj  Hello World.vcxproj.filters  Main.cpp  generator.py  main.h  main.py  main.qml  top_gonewildaudio.csv  top_joi.csv  top_nsfwasmr.csv
curl/: libcurl_a.lib
include/: main.h  reddit_curl.h
qml/: BasicChart1.qml  BasicNumpad.qml  MainGo.qml  MainQt.qml  Menulist.qml  S_m2b1t0.qml  ViewMode.qml  ViewMode_oldqml  ViewMonitor.qml  ViewMonitorPreset.qml  ViewPatient.qml  ViewSettings.qml  config.js  new-ui.qmlproject  new-ui.qmlproject.user.106b6c8
reference/: example_threader.py
src/: Main.cpp
